--- a/src/App.css
+++ b/src/App.css
@@ -1,73 +1,44 @@
 @import url(https://fonts.googleapis.com/css2?family=Courgette&display=swap);
 
-.nav-space{
-  justify-content: space-around;
-}
-.navbar-brand{
-  font-family: 'Courgette', cursive;
-  font-size: 1.2rem;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-.nav-item{
+.navbar {
+  width: 100vw;
+  background-color: rgba(212, 212, 212, 0.527);
   position: relative;
-  z-index: 1;
+  padding: 1% 2% 1% 2%;
 }
 
-.nav-item:hover:before{
-  content: "";
-  position: absolute;
-  top : 0%;
-  left: 0;
-  right: 0;
-  margin: auto;
-  border-bottom:solid black 2px;
-  /* border-top:solid black 2px; */
+.container-fluid {
+  display: flex;
   width: 100%;
-  height: 100%;
-  z-index: -1;
-  animation: animate forwards .6s cubic-bezier(.6,-0.28,.74,.05);
-}
-.nav-item:hover:after{
-  content: "";
-  position: absolute;
-  top : 0%;
-  left: 0;
-  right: 0;
-  margin: auto;
-  /* border-bottom:solid black 2px; */
-  border-top:solid black 2px;
-  width: 50%;
-  height: 100%;
-  z-index: -1;
-  animation: animate1 forwards .6s cubic-bezier(.6,-0.28,.74,.05);
+  justify-content: space-between;
 }
 
-@keyframes animate {
-  0%{
-    border-bottom: solid black 1px;
-    width: 0%;
-  }
-  50%{
-    border-bottom: solid black 1px;
-    width: 50%;
-  }
-  100%{
-    border-bottom: solid black 1px;
-    width: 100%;
-  }
+.container-fluid a {
+  text-decoration: none;
+  font-size: 1.1em;
+  color: black;
 }
-@keyframes animate1 {
-  0%{
-    border-bottom: solid black 1px;
-    width: 0%;
-  }
-  50%{
-    border-bottom: solid black 1px;
-    width: 20%;
-  }
-  100%{
-    border-bottom: solid black 1px;
-    width: 40%;
-  }
+
+.navbar-brand {
+  font-family: 'Courgette', cursive;
+  font-size: 1.2em !important;
+}
+
+.navbar-nav {
+  width: 40%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.nav-link{
+  list-style-type: none;
+  margin: .5% 1.5%;
+  text-transform: capitalize;
+  width: auto;
 }
