--- a/src/CSS/home.css
+++ b/src/CSS/home.css
@@ -1,23 +1,173 @@
-.carousel-inner{
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Roboto+Mono:wght@700&family=Sedgwick+Ave+Displayfamily=Schibsted+Grotesk:wght@800&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap'); */
+
+
+/* Home Typing  */
+.branding {
+    text-align: center;
+    /* margin: auto; */
+    padding-top: 40vh;
+    height: 100vh;
+    width: 100vw;
+    background-image: url('https://img.freepik.com/premium-photo/abstract-splashed-watercolor-textured-background_469760-3046.jpg?w=900');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.wra>h1 {
+    font-size: 3rem;
+    font-family: 'Courgette', cursive;
+    font-family: 'Roboto Mono', monospace;
+    margin-bottom: 1rem;
+}
+
+.wra>div>span>div,
+span {
+    font-size: 2rem;
+    font-family: 'Sedgwick Ave Display', cursive;
+}
+
+
+/* Skills */
+
+.scroll{
+    background-color: #41414100;
+}
+
+.skills {
+    background-image: url('/src/Images/vscode.png');
+}
+
+.container{
+    padding-bottom: 1.5rem;
+    width: 80vw;
+    display: block;
+    margin:auto;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    border-radius: 15px;
+    /* box-shadow: #555; */
+    background-color: #555;
+
+}
+.skills_branding {
+    margin-left: 5vw;
+    opacity: 50%;
+}
+
+.skills_branding>h1 {
+    font-size: 5rem;
+    text-align:left;
+    font-family: 'Sedgwick Ave Display', cursive;
+    text-transform: uppercase;
+}
+
+
+.flex{
     display: flex;
-    justify-content: space-around;
-}
-
-.carousel-item{
-    /* position: absolute; */
-    /* bottom: auto;
-    top: auto; */
     width: 100%;
-    height: 80vh;
-    /* display: block; */
+    margin: .2rem 0 0 0;
+    padding: 0 2.5% 0 4%;
 }
 
-.branding{
+.flex>i{
+    font-size: 2.5rem;
+    padding-top:.6rem ;
+}
+
+.flex>h2{
+    width:15%;
+    text-align: center;
+    padding-top:0.8rem;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+
+.meter {
+    box-sizing: content-box;
+    height: 20px;
+    /* Can be anything */
+    position: relative;
+    margin: 2vh 2vw 2vh 2vw;
+    /* Just for demo spacing */
+    /* background: linear-gradient(90deg,green 35%,yellow 70%,red 100%); */
+    background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
+    border-radius: 25px;
+    padding: 10px;
+    width: 70%;
+    box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
+}
+
+.meter>span {
+    display: block;
+    height: 100%;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    background-color: rgb(43, 194, 83);
+    background-image: linear-gradient(center bottom,
+            rgb(43, 194, 83) 37%,
+            rgb(84, 240, 84) 69%);
+    box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
+        inset 0 -2px 6px rgba(0, 0, 0, 0.4);
+    position: relative;
+    overflow: hidden;
+}
+
+.meter>span:after{
+    content: "";
+    position: absolute;
+    top: 0;
     left: 0;
+    bottom: 0;
     right: 0;
-    justify-items: center;
-    align-items: center;
-    /* width: auto;
-    height: auto;*/
-    margin:auto; 
+    background-image: linear-gradient(-45deg,
+            rgba(255, 255, 255, 0.2) 25%,
+            transparent 25%,
+            transparent 50%,
+            rgba(255, 255, 255, 0.2) 50%,
+            rgba(255, 255, 255, 0.2) 75%,
+            transparent 75%,
+            transparent);
+    z-index: 1;
+    background-size: 50px 50px;
+    animation: move 2s linear infinite;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    overflow: hidden;
+}
+.ending{
+    width: .25rem;
+    border-radius: 0 !important;
+    height: 1.2rem;
+    margin-top: -.05rem;
+    margin-left: .25rem ;
+    background-image:linear-gradient(90deg,black,black) !important;
+}
+
+@keyframes move {
+    0% {
+        background-position: 0 0;
+    }
+
+    100% {
+        background-position: 50px 50px;
+    }
+}
+
+.orange>span {
+    background-image: linear-gradient(90deg,#B2AA8E  , #F58F29);
+}
+
+.nostripes>span>span,
+.nostripes>span::after {
+    background-image: none;
+}
+
+#page-wrap {
+    width: 490px;
+    margin: 80px auto;
 }
